force-app/main/default/objects/Implementation_SLA__mdt/Implementation_SLA__mdt.object-meta.xml
<CustomObject><label
  >Implementation SLA</label><pluralLabel
  >Implementation SLAs</pluralLabel><visibility
  >Public</visibility></CustomObject>