force-app/main/default/objects/Implementation_SLA__mdt/fields/Handoff_Acceptance_Hours__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Acceptance_Hours__c</fullName>
    <label>Handoff Acceptance Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>