force-app/main/default/objects/Implementation_SLA__mdt/fields/Implementation_Type__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Type__c</fullName>
    <label>Implementation Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>