force-app/main/default/objects/Implementation_SLA__mdt/fields/Milestone_Warning_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Warning_Percentage__c</fullName>
    <label>Milestone Warning Percentage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>