force-app/main/default/objects/Implementation_SLA__mdt/fields/Target_Start_Days__c.field-meta.xml
<CustomField>
    <fullName>Target_Start_Days__c</fullName>
    <label>Target Start Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>